--- a/OpenId/OpenId.Authority/OpenId.Authority.csproj
+++ b/OpenId/OpenId.Authority/OpenId.Authority.csproj
@@ -30,4 +30,12 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Model\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OpenId.Shared\OpenId.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
