--- a/OpenId/OpenId.BlazorWasm/OpenId.BlazorWasm.csproj
+++ b/OpenId/OpenId.BlazorWasm/OpenId.BlazorWasm.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.3" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.3" />
+        <PackageReference Include="OpenIddict.Client" Version="7.0.0-preview.1.25169.78" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.1" />
     </ItemGroup>
 
