--- a/OpenId/OpenId.Authority/appsettings.Development.json
+++ b/OpenId/OpenId.Authority/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "Cors": {
+    "AllowedOrigins": [
+      "https://localhost:7002"
+      ]
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
