--- a/OpenId/OpenId.Authority/appsettings.Production.json
+++ b/OpenId/OpenId.Authority/appsettings.Production.json
@@ -1,4 +1,9 @@
 {
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:7002"
+    ]
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=mssqlserver,1433;Database=OpenIddictDb;User Id=sa;Password=Server2008!;Encrypt=False;MultipleActiveResultSets=true;TrustServerCertificate=true;Integrated Security=False"
   },
