--- a/OpenId/OpenId.Authority/appsettings.json
+++ b/OpenId/OpenId.Authority/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Cors": {
+    "AllowedOrigins": [
+      "https://localhost:7002"
+    ]
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=OpenIdDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
