--- a/OpenId/OpenId.BlazorWasm/nginx.conf
+++ b/OpenId/OpenId.BlazorWasm/nginx.conf
@@ -5,7 +5,7 @@ http{
         listen 80;
         server_name localhost;
         root /usr/share/nginx/html;
-        add_header 'Blazor-Environment' 'BLAZOR_ENVIRONMENT' ;
+        add_header 'Blazor-Environment' blazor-environment;
         index index.html;
         location / {
             try_files $uri $uri/ /index.html;
