--- a/OpenId/compose.yaml
+++ b/OpenId/compose.yaml
@@ -1,31 +1,29 @@
 ﻿services:
 
-  mssqlserver:
-    image: mcr.microsoft.com/mssql/server:2019-latest
-    container_name: ctr-mssqlserver
-    ports:
-      - "1433:1433"
-    environment:
-      SA_PASSWORD: "Server2008!"
-      ACCEPT_EULA: "Y"
-    
-  openid.authority:
-    image: img-authority
-    build:
-      context: .
-      dockerfile: DockerOpenIdAuthority/Dockerfile
-    ports:
-      - "7000:8080"
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Production
-    depends_on:
-      - mssqlserver
-    container_name: ctr-openid-authority
+#  mssqlserver:
+#    image: mcr.microsoft.com/mssql/server:2019-latest
+#    container_name: ctr-mssqlserver
+#    ports:
+#      - "1433:1433"
+#    environment:
+#      SA_PASSWORD: "Server2008!"
+#      ACCEPT_EULA: "Y"
+#
+#  openid.authority:
+#    image: img-authority
+#    build:
+#      context: .
+#      dockerfile: DockerOpenIdAuthority/Dockerfile
+#    ports:
+#      - "7000:8080"
+#    environment:
+#      - ASPNETCORE_ENVIRONMENT=Production
+#    depends_on:
+#      - mssqlserver
+#    container_name: ctr-openid-authority
 
   openid.blazorwasm:
     image: img-blazorwasm
-    environment:
-      ASPNETCORE_ENVIRONMENT: Production
     build:
       context: .
       args:
